tests/ui/privacy/associated-item-privacy-inherent.stderr
error: type `for<'a> fn(&'a priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:13:21
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
   | |                     ^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_nominal::mac!`
...
LL |       priv_nominal::mac!();
   |       -------------------- in this macro invocation

error: type `for<'a> fn(&'a priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:15:9
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_nominal::mac!`
...
LL |       priv_nominal::mac!();
   |       -------------------- in this macro invocation

error: type `for<'a> fn(&'a priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:17:13
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method();
   | |             ^^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_nominal::mac!`
...
LL |       priv_nominal::mac!();
   |       -------------------- in this macro invocation

error: associated constant `CONST` is private
  --> $DIR/associated-item-privacy-inherent.rs:19:9
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
LL | |
LL | |         value;
...  |
LL | |         Pub::CONST;
   | |         ^^^^^^^^^^ private associated constant
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_nominal::mac!`
...
LL |       priv_nominal::mac!();
   |       -------------------- in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:37:21
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
   | |                     ^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:39:9
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:41:13
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method(loop {});
   | |             ^^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:57:21
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method::<Priv>;
   | |                     ^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:59:9
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method::<Priv>;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:61:9
   |
LL | /     pub macro mac() {
LL | |         let value = Pub::method::<Priv>;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method::<Priv>();
   | |         ^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:80:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
   | |                     ^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:82:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:84:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
LL | |
LL | |         let value = Pub::method;
   | |                     ^^^^^^^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:86:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:88:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         let value = <Pub>::static_method;
   | |                     ^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:90:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:92:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         let value = Pub::static_method;
   | |                     ^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:94:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:96:19
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         Pub(Priv).method();
   | |                   ^^^^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:99:10
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         <Pub>::CONST;
   | |          ^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:101:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub>::method;
LL | |
LL | |         value;
...  |
LL | |         Pub::CONST;
   | |         ^^^ private type
...  |
LL | |         // pub type InSignatureTy = Pub::AssocTy;
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: aborting due to 21 previous errors

